syntax = "proto3";

package proto.task.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/akira-saneyoshi/task-app/interfaces/proto/task/v1;taskv1";

service TaskService {
  rpc GetTaskList(GetTaskListRequest) returns (GetTaskListResponse) {}
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc UpdateTaskDetails(UpdateTaskDetailsRequest) returns (UpdateTaskDetailsResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

enum TaskStatus {
  TASK_STATUS_PENDING_UNSPECIFIED = 0;
  TASK_STATUS_IN_PROGRESS = 1;
  TASK_STATUS_COMPLETED = 2;
}

message Task {
  string id = 1;
  string user_id = 2;
  string title = 3;
  optional string description = 4;
  TaskStatus status = 5;
  optional google.protobuf.Timestamp due_date = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message GetTaskListRequest {
  //
}

message GetTaskListResponse {
  repeated Task tasks = 1;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string due_date = 4;
}

message CreateTaskResponse {
  string created_id = 1;
}

message UpdateTaskDetailsRequest {
  string task_id = 1;
  string title = 2;
  string description = 3;
  string due_date = 4;
}

message UpdateTaskDetailsResponse {
  //
}

message DeleteTaskRequest {
  string task_id = 1;
}

message DeleteTaskResponse {
  //
}
